--- a/index.html
+++ b/index.html
@@ -1,61 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Clínica App</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sistema de Atendimentos</title>
+    <link rel="stylesheet" href="css/style.css?v=2025-10-20" />
+  </head>
 
-  <!-- Manifesto do PWA -->
-  <link rel="manifest" href="./manifest.json">
+  <body>
+    <header>
+      <nav>
+        <button id="btnAgenda" class="active">Agenda</button>
+        <button id="btnPacientes">Pacientes</button>
+        <button id="btnFiscal">Fiscal</button>
+        <button id="btnNFe">NF-e</button>
+      </nav>
+    </header>
 
-  <!-- Ícones -->
-  <link rel="icon" type="image/png" sizes="192x192" href="./icon-192.png">
-  <link rel="apple-touch-icon" href="./icon-512.png">
+    <main id="content"></main>
 
-  <!-- Tema para PWA -->
-  <meta name="theme-color" content="#0B69FF" />
+    <footer>
+      <p>© 2025 | Sistema de Atendimentos</p>
+    </footer>
 
-  <!-- CSS principal -->
-  <link rel="stylesheet" href="./style.css">
-</head>
-
-<body>
-  <header>
-    <h1>Clínica App</h1>
-    <nav>
-      <button id="btnAgenda" class="active">Agenda</button>
-      <button id="btnPacientes">Pacientes</button>
-      <button id="btnFiscal">Fiscal</button>
-      <button id="btnNFe">NF-e</button>
-      <button id="btnSuporte">Suporte</button>
-    </nav>
-  </header>
-
-  <main id="content">
-    <!-- conteúdo renderizado dinamicamente pelo app.js -->
-  </main>
-
-  <footer>
-    © <span id="year"></span> Clínica App — Gestão Inteligente
-  </footer>
-
-  <!-- Script principal -->
-  <script src="./app.js"></script>
-
-  <!-- Registro do Service Worker -->
-  <script>
-    // atualiza o ano automaticamente
-    document.getElementById("year").textContent = new Date().getFullYear();
-
-    // registra o service worker se suportado
-    if ("serviceWorker" in navigator) {
-      window.addEventListener("load", () => {
-        navigator.serviceWorker
-          .register("./sw.js")
-          .then(() => console.log("✅ Service Worker registrado"))
-          .catch(err => console.warn("⚠️ Falha ao registrar SW:", err));
-      });
-    }
-  </script>
-</body>
+    <!-- Scripts base (ordem importa) -->
+    <script src="js/helpers.js"></script>
+    <script src="js/agenda.js"></script>
+    <script src="js/pacientes.js"></script>
+    <script src="js/fiscal.js"></script>
+    <script src="js/nfe.js"></script>
+    <script src="js/main.js"></script>
+  </body>
 </html>
